added margin for submit label

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <input type="checkbox" id="sat" name="sat" value="Saturday">
         <label for="sat">Saturday</label><br style="margin-bottom: 1rem;">
 
-        <label for="other">Anything else you'd like us to know?</label>
+        <label for="other" id="submit-label">Anything else you'd like us to know?</label>
         <textarea id="other" placeholder="Enter your additional info here..."></textarea> 
 
         <input type="submit" id="submit" value="Sign Up For Classes">
