Fixed W3C html & css errors

--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
+<html lang="en">
+
 <head>
-    <meta charset="uft-8">
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <Title>Rhythm & Code Music Academy</Title>
     <link rel="stylesheet" type="text/css" href="styles/style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed&family=Megrim&family=Poiret+One&display=swap" rel="stylesheet">
-  
+    <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed&family=Megrim&family=Poiret+One&display=swap"
+        rel="stylesheet">
+
 </head>
+
 <body id="survey-body">
     <h1 id="title">Rhythm & Code Music Academy</h1>
     <p id="description">Studio to Stage: Hear Your Dreams Come to Life</p>
@@ -17,7 +21,7 @@
         <label for="email" id="email-label">Email</label><br>
         <input type="email" id="email" class="text-input" placeholder=" Enter your Email" required><br>
         <label for="number" id="number-label">Age</label><br>
-        <input type="number" id="number" class="text-input" placeholder=" Age" min="1" max="99"  required><br>
+        <input type="number" id="number" class="text-input" placeholder=" Age" min="1" max="99" required><br>
         <label for="dropdown" id="dropdown-label">What class would you like to take?</label>
         <select name="class-choice" id="dropdown" form="survey-form" required>
             <option value="" selected disabled>Select a Class</option>
@@ -61,7 +65,7 @@
         <label for="sat">Saturday</label><br style="margin-bottom: 1rem;">
 
         <label for="other" id="submit-label">Anything else you'd like us to know?</label>
-        <textarea id="other" placeholder="Enter your additional info here..."></textarea> 
+        <textarea id="other" placeholder="Enter your additional info here..."></textarea>
 
         <input type="submit" id="submit" value="Sign Up For Classes">
 
@@ -70,3 +74,5 @@
 
     </form>
 </body>
+
+</html>
