--- a/index.html
+++ b/index.html
@@ -11,68 +11,70 @@
 
 </head>
 
-<body id="survey-body">
-    <h1 id="title">Rhythm & Code Music Academy</h1>
-    <p id="description">Studio to Stage: Hear Your Dreams Come to Life</p>
+<body>
+    <main id="survey-body">
+        <h1 id="title">Rhythm & Code Music Academy</h1>
+        <p id="description">Studio to Stage: Hear Your Dreams Come to Life</p>
 
-    <form action="" id="survey-form">
-        <label for="name" id="name-label">Name</label><br>
-        <input type="text" id="name" class="text-input" placeholder=" Enter Your Name" tabindex="0" required><br>
-        <label for="email" id="email-label">Email</label><br>
-        <input type="email" id="email" class="text-input" placeholder=" Enter your Email" required><br>
-        <label for="number" id="number-label">Age</label><br>
-        <input type="number" id="number" class="text-input" placeholder=" Age" min="1" max="99" required><br>
-        <label for="dropdown" id="dropdown-label">What class would you like to take?</label>
-        <select name="class-choice" id="dropdown" form="survey-form" required>
-            <option value="" selected disabled>Select a Class</option>
-            <option value="music-theory">Music Theory</option>
-            <option value="vocals">Vocals</option>
-            <option value="guitar">Guitar</option>
-            <option value="drums">Drums</option>
-            <option value="bass">Bass</option>
-            <option value="piano">Piano</option>
-        </select>
+        <form action="" id="survey-form">
+            <label for="name" id="name-label">Name</label><br>
+            <input type="text" id="name" class="text-input" placeholder=" Enter Your Name" tabindex="0" required><br>
+            <label for="email" id="email-label">Email</label><br>
+            <input type="email" id="email" class="text-input" placeholder=" Enter your Email" required><br>
+            <label for="number" id="number-label">Age</label><br>
+            <input type="number" id="number" class="text-input" placeholder=" Age" min="1" max="99" required><br>
+            <label for="dropdown" id="dropdown-label">What class would you like to take?</label>
+            <select name="class-choice" id="dropdown" form="survey-form" required>
+                <option value="" selected disabled>Select a Class</option>
+                <option value="music-theory">Music Theory</option>
+                <option value="vocals">Vocals</option>
+                <option value="guitar">Guitar</option>
+                <option value="drums">Drums</option>
+                <option value="bass">Bass</option>
+                <option value="piano">Piano</option>
+            </select>
 
-        <p>What is your experience level?</p>
-        <input type="radio" id="beginner" class="radio" name="experience" value="Beginner">
-        <label for="beginner">Beginner</label><br>
-        <input type="radio" id="intermediate" class="radio" name="experience" value="Intermediate">
-        <label for="intermediate">Intermediate</label><br>
-        <input type="radio" id="advanced" class="radio" name="experience" value="Advanced">
-        <label for="advanced">Advanced</label><br style="margin-bottom: 1rem;">
+            <p>What is your experience level?</p>
+            <input type="radio" id="beginner" class="radio" name="experience" value="Beginner">
+            <label for="beginner">Beginner</label><br>
+            <input type="radio" id="intermediate" class="radio" name="experience" value="Intermediate">
+            <label for="intermediate">Intermediate</label><br>
+            <input type="radio" id="advanced" class="radio" name="experience" value="Advanced">
+            <label for="advanced">Advanced</label><br style="margin-bottom: 1rem;">
 
-        <label for="lessons" id="lessons-label">What is your preferred class type?</label>
-        <select name="lessons" id="lessons" form="survey-form" required>
-            <option value="" selected disabled>Choose a class type</option>
-            <option value="online">Online Lessons</option>
-            <option value="private">Private Lessons</option>
-            <option value="group">Group Lessons (Up to 4 Participants)</option>
-            <option value="workshop">Workshops (Large Groups)</option>
-        </select>
+            <label for="lessons" id="lessons-label">What is your preferred class type?</label>
+            <select name="lessons" id="lessons" form="survey-form" required>
+                <option value="" selected disabled>Choose a class type</option>
+                <option value="online">Online Lessons</option>
+                <option value="private">Private Lessons</option>
+                <option value="group">Group Lessons (Up to 4 Participants)</option>
+                <option value="workshop">Workshops (Large Groups)</option>
+            </select>
 
-        <p>What days can you attend?</p>
-        <input type="checkbox" id="mon" name="mon" value="Monday">
-        <label for="mon">Monday</label><br>
-        <input type="checkbox" id="tue" name="tue" value="Tuesday">
-        <label for="tue">Tuesday</label><br>
-        <input type="checkbox" id="wed" name="wed" value="Wednesday">
-        <label for="wed">Wednesday</label><br>
-        <input type="checkbox" id="thu" name="thu" value="Thursday">
-        <label for="thu">Thursday</label><br>
-        <input type="checkbox" id="fri" name="fri" value="Friday">
-        <label for="fri">Friday</label><br>
-        <input type="checkbox" id="sat" name="sat" value="Saturday">
-        <label for="sat">Saturday</label><br style="margin-bottom: 1rem;">
+            <p>What days can you attend?</p>
+            <input type="checkbox" id="mon" name="mon" value="Monday">
+            <label for="mon">Monday</label><br>
+            <input type="checkbox" id="tue" name="tue" value="Tuesday">
+            <label for="tue">Tuesday</label><br>
+            <input type="checkbox" id="wed" name="wed" value="Wednesday">
+            <label for="wed">Wednesday</label><br>
+            <input type="checkbox" id="thu" name="thu" value="Thursday">
+            <label for="thu">Thursday</label><br>
+            <input type="checkbox" id="fri" name="fri" value="Friday">
+            <label for="fri">Friday</label><br>
+            <input type="checkbox" id="sat" name="sat" value="Saturday">
+            <label for="sat">Saturday</label><br style="margin-bottom: 1rem;">
 
-        <label for="other" id="submit-label">Anything else you'd like us to know?</label>
-        <textarea id="other" placeholder="Enter your additional info here..."></textarea>
+            <label for="other" id="submit-label">Anything else you'd like us to know?</label>
+            <textarea id="other" placeholder="Enter your additional info here..."></textarea>
 
-        <input type="submit" id="submit" value="Sign Up For Classes">
-
-
+            <input type="submit" id="submit" value="Sign Up For Classes">
 
 
-    </form>
+
+
+        </form>
+    </main>
 </body>
 
 </html>
