fixed error header

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 </head>
 
 <body>
-    <Header class="header-box">
+    <header class="header-box">
         <h1 id="title">Rhythm & Code Music Academy</h1>
         <p id="description">Studio to Stage: Hear Your Dreams Come to Life</p>
-    </Header>
+    </header>
     <main>
         <form action="" id="survey-form">
             <div class="form-box">
